fixed jump css not load

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,11 +10,11 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require_self
  *= require flexslider
  *= require magnific-popup
  *= require style
  *= require devise
- *= require_self
  */
 
 
@@ -66,10 +66,12 @@
   a.first {
     padding-left: 0px;
     padding-right: 10px;
+    font-size: 16px;
   }
 
   a.last {
     padding-right: 0px;
+    font-size: 14px;
   }
 }
 
